--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,4 @@
 {deps, [
-    {rt, ".*", {git, "https://github.com/goncalotomas/rt_lib", {branch, "master"}}}
+    % {riak, {git, "https://github.com/basho/riak", {tag, "riak-2.2.6"}}},
+    {rt, {git, "https://github.com/goncalotomas/rt_lib", {branch, "master"}}}
 ]}.
