--- a/rebar.config
+++ b/rebar.config
@@ -12,6 +12,10 @@
 %% current setup, the only restriction being that the current version of rebar3
 %% supports only R16 onward. (tested R16-R21 on jun 26th by Gonçalo Tomás)
 {deps, [
+    %% override setup which is incompatible with rebar3
+    {setup, "2.0.2"},
+    {lucene_parser, {git, "https://github.com/goncalotomas/lucene_parser", {branch, "master"}}},
+    {riak_search, {git, "https://github.com/goncalotomas/riak_search", {branch, "develop"}}},
     {riak, {raw, {git, "https://github.com/basho/riak", {branch, "develop"}}}},
     {rt, {git, "https://github.com/goncalotomas/rt_lib", {branch, "master"}}}
 ]}.
@@ -24,23 +28,31 @@
 %% ./rebar3 as riak_225 ct
 {profiles, [
     {riak_226, [
-        {deps, [
-            {riak, {raw, {git, "https://github.com/basho/riak", {tag, "riak-2.2.6"}}}}
+        {overrides, [
+            {deps, [
+                {riak, {raw, {git, "https://github.com/basho/riak", {tag, "riak-2.2.6"}}}}
+            ]}
         ]}
     ]},
     {riak_225, [
-        {deps, [
-            {riak, {raw, {git, "https://github.com/basho/riak", {tag, "riak-2.2.5"}}}}
+        {overrides, [
+            {deps, [
+                {riak, {raw, {git, "https://github.com/basho/riak", {tag, "riak-2.2.5"}}}}
+            ]}
         ]}
     ]},
     {riak_224, [
-        {deps, [
-            {riak, {raw, {git, "https://github.com/basho/riak", {tag, "riak-2.2.4"}}}}
+        {overrides, [
+            {deps, [
+                {riak, {raw, {git, "https://github.com/basho/riak", {tag, "riak-2.2.4"}}}}
+            ]}
         ]}
     ]},
     {riak_223, [
-        {deps, [
-            {riak, {raw, {git, "https://github.com/basho/riak", {tag, "riak-2.2.3"}}}}
+        {overrides, [
+            {deps, [
+                {riak, {raw, {git, "https://github.com/basho/riak", {tag, "riak-2.2.3"}}}}
+            ]}
         ]}
     ]}
 ]}.
@@ -64,5 +76,6 @@
 ]}.
 
 {post_hooks, [
+    {compile, "./scripts/gen_release"},
     {ct, "./scripts/teardown"}
 ]}.
