remove pre_ct hook for now

--- a/rebar.config
+++ b/rebar.config
@@ -72,7 +72,7 @@
 %% NOTE: currently there is a caveat with this approach: the post_hooks is not
 %% being run if the CT suites fail!
 {pre_hooks, [
-    {ct, "./scripts/setup"}
+    % {ct, "./scripts/setup"}
 ]}.
 
 {post_hooks, [
