add intercepts dep

--- a/rebar.config
+++ b/rebar.config
@@ -17,7 +17,8 @@
     {lucene_parser, {git, "https://github.com/goncalotomas/lucene_parser", {branch, "master"}}},
     {riak_search, {git, "https://github.com/goncalotomas/riak_search", {branch, "develop"}}},
     {riak, {raw, {git, "https://github.com/basho/riak", {branch, "develop"}}}},
-    {rt, {git, "https://github.com/goncalotomas/rt_lib", {branch, "master"}}}
+    {rt, {git, "https://github.com/goncalotomas/rt_lib", {branch, "master"}}},
+    {intercepts, {git, "https://github.com/goncalotomas/intercepts", {branch, "master"}}}
 ]}.
 
 %% rebar3 profiles could allow us to test different riak versions. By
