--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
 language: erlang
 otp_release:
-  - 20.3
-  - 21.0
+  - R16B02
 install:
-  - make
+  - ./rebar3 compile
 script:
-  - rebar3 dialyzer
-  - rebar3 xref
-  - rebar3 escriptize
+  - ./rebar3 ct
 before_script:
   - epmd -daemon
