tell rebar3 to compile files in intercepts folder

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,7 @@
 {erl_opts, [{parse_transform, lager_transform}]}.
 
+{extra_src_dirs, ["intercepts"]}. 
+
 {plugins, [
     {rebar3_hex, {git, "https://github.com/tsloughter/rebar3_hex", {tag, "v1.12.0"}}},
     {rebar_raw_resource,
